--- a/index.html
+++ b/index.html
@@ -183,6 +183,8 @@
                         <a class="social-link rounded-circle text-white" href="#!"><i class="icon-social-github"></i></a>
                     </li>
                 </ul>
+                <p>Contributor : FORINTERNET</p>
+                <br>
                 <p class="text-muted small mb-0">Copyright &copy; Your Website 2022</p>
             </div>
         </footer>
