--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div class="container px-4 px-lg-5 text-center">
                 <h2 class="mx-auto mb-5">
                     Welcome to
-                    <em>your</em>
+                    <em> Forinternet </em>
                     next website!
                 </h2>
                 <a class="btn btn-danger btn-xl" href="https://startbootstrap.com/theme/stylish-portfolio/">Download Now!</a>
